...
        android:text="Tangry"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textColor="?android:attr/textColorPrimary" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:textColorHint="?android:attr/textColorHint" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textColorHint="?android:attr/textColorHint" />
...
        android:layout_height="wrap_content"
        android:text="Remember Me"
        android:textColor="?android:attr/textColorPrimary"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:layout_marginTop="16dp"
        android:textColor="?android:attr/textColorPrimary" />

...
