...
        app:layout_constraintTop_toBottomOf="@id/password_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Create Account Button -->
    <Button
        android:id="@+id/create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="Create Account"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintTop_toBottomOf="@id/password_input2"
...
