...
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/Angry_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Angry"
                android:textColor="@color/colorAngry" />

            <CheckBox
                android:id="@+id/Confused_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:textColor="@color/colorDisgust" />

            <CheckBox
                android:id="@+id/Fearful_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fear"
                android:textColor="@color/colorFear" />

            <CheckBox
                android:id="@+id/Happy_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
